[package]
name = "ecs_node"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-graphics = "0.8.1"
tinybmp = "0.5.0"

[target.'cfg(windows)'.dependencies]
minifb = {git = "https://github.com/emoon/rust_minifb.git"}

[target.'cfg(all(target_os = "linux", target_arch = "arm"))'.dependencies]
framebuffer = "0.3.1"