[package]
name = "ecs_node"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-graphics = "0.8.1"
tinybmp = "0.6.0"

bevy = { version = "0.14.0-rc.2", default-features = false }

[target.'cfg(windows)'.dependencies]
minifb = {git = "https://github.com/emoon/rust_minifb.git"}
device_query = "2.1.0"

[target.'cfg(target_os = "macos")'.dependencies]
minifb = {git = "https://github.com/emoon/rust_minifb.git"}
device_query = "2.1.0"

[target.'cfg(all(target_os = "linux", target_arch = "arm"))'.dependencies]
framebuffer = "0.3.1"